src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) -  YEAR( DOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HaveWhicle__c</fullName>
        <label>HaveWhicle</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <label>Married</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Date__c</fullName>
        <label>My Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WifeName__c</fullName>
        <label>WifeName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>weekday__c</fullName>
        <label>weekday</label>
        <type>Date</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MaleStudentsView</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Class__c</columns>
        <columns>email__c</columns>
        <columns>DOB__c</columns>
        <columns>Age__c</columns>
        <columns>HaveWhicle__c</columns>
        <columns>Married__c</columns>
        <columns>Sex__c</columns>
        <columns>WifeName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>MaleStudentsView</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_Card_Number_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number must be in this format: 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB_validation</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>DOB should not be greater then today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mix_Pct_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Mix_Pct__c  &gt; 1.0 , Mix_Pct__c  &lt; 0.0)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Mix Pct must be between 0 and 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_rule</fullName>
        <active>true</active>
        <errorConditionFormula>MOD( Multiple_of_5__c ,5)   &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Number must be a multiple of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>My_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(MOD( My_Date__c - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorDisplayField>My_Date__c</errorDisplayField>
        <errorMessage>Date must be a weekday.</errorMessage>
    </validationRules>
</CustomObject>